[package]
name = "tb-runtime"
version.workspace = true
edition.workspace = true

[lib]
# Support for mobile platforms (Android/iOS) and FFI for compiled mode
crate-type = ["cdylib", "staticlib", "rlib"]
name = "tb_runtime"

[dependencies]
# Core dependencies for compiled programs (minimal!)
# No dependencies needed for basic runtime!

# Serialization support (always available for compiled code)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["blocking", "json"] }

# Optional dependencies for full runtime (JIT mode)
tb-core = { path = "../tb-core", optional = true }
tb-builtins = { path = "../tb-builtins", optional = true }
tb-plugin = { path = "../tb-plugin", optional = true }
thiserror = { workspace = true, optional = true }
im = { workspace = true, optional = true }
libloading = { workspace = true, optional = true }
dashmap = { workspace = true, optional = true }
once_cell = { version = "1.19", optional = true }

# Android-specific dependencies
[target.'cfg(target_os = "android")'.dependencies]
jni.workspace = true
ndk.workspace = true
ndk-context.workspace = true

# iOS-specific dependencies
[target.'cfg(target_os = "ios")'.dependencies]
# iOS-specific crates can be added here if needed

[features]
# Default: minimal runtime for compiled programs (no dependencies!)
default = []

# Full runtime with built-ins and plugin support (for JIT mode)
full = ["tb-core", "tb-builtins", "thiserror", "im", "dashmap", "once_cell"]

# Plugin support (requires full runtime)
plugins = ["full", "tb-plugin", "libloading"]

# Language-specific plugin support
python = ["plugins", "tb-plugin/python"]
javascript = ["plugins", "tb-plugin/javascript"]

# Mobile support
mobile = []  # Feature flag for mobile-specific functionality

